backend major section completed

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 PORT=5001
-mongodb_uri=mongodb+srv://bijaydahal:bijaydahal@12345@cluster0.782evrx.mongodb.net
+mongodb_uri=mongodb+srv://bijay:bijay123@cluster0.dd6ejgf.mongodb.net
+USERNAME=bijay
+PASS=bijay123
+ACCESS_TOKEN_SECRET=secret
